# Ebook_Transalator

./: .gitattributes  .gitignore  Architect.md  LICENSE  Plan.md  README.md  progress.md  pyproject.toml  requirements.txt
ebook_translator/: __init__.py  cli.py  models.py  server.py
ebook_translator/agent/: __init__.py  pipeline.py  validator.py  web_search.py
ebook_translator/db/: __init__.py  database.py
ebook_translator/export/: __init__.py  epub_writer.py  export_engine.py
ebook_translator/parsers/: __init__.py  base.py  epub_parser.py  txt_parser.py
ebook_translator/translator/: __init__.py  adapters.py  pipeline.py  prompts.py
ebook_translator/utils/: __init__.py  autoformat.py  chunker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: ExportTab.tsx  GlossaryEditor.tsx  Library.tsx  MetadataReview.tsx  Reader.tsx  Settings.tsx  TranslateView.tsx
tests/: [修真·仙侠] 《仙福龙缘+番外》 作者：花羽容.txt  [修真·仙侠] 《红尘魔道（第二部）》 作者：狗狗执行官.txt  __init__.py  test_chunker.py  test_parsers.py
