[project]
name = "ebook-translator"
version = "0.1.0"
description = "E-book translation tool with caching, error recovery, and glossary injection"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "chardet>=5.2",
    "lxml>=5.1",
    "tiktoken>=0.7.0",
    "openai>=1.30.0",
    "Pillow>=10.3",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
ebook-translator = "ebook_translator.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ebook_translator", "ebook_translator.*"]
